--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@radix-ui/react-slot": "^1.2.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.23.12",
     "lucide-react": "^0.511.0",
     "motion": "^12.18.1",
     "next": "15.3.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "swiper": "^11.2.10",
     "tailwind-merge": "^3.3.0",
     "vaul": "^1.1.2"
   },
